Budowa biblioteki .so dla alokatora

--- a/studenckie/alokator_pamieci/Makefile
+++ b/studenckie/alokator_pamieci/Makefile
@@ -1,10 +1,10 @@
-$CC = gcc
-$CFLAGS = -pthread -fPIC -shared -std=gnu99 -Wall -Wextra
+CC = gcc
+CFLAGS = -pthread -fPIC -shared -std=gnu99 -Wall -Wextra
 
 all : libmemalc.so
 
 clean :
-	rm -f *.o
+	rm -f *.so
 
 libmemalc.so : memalc.c
 	$(CC) $(CFLAGS) memalc.c -o libmemalc.so
