Osobne klasy dla instrukcji

--- a/interpreter-APO/build.xml
+++ b/interpreter-APO/build.xml
@@ -38,6 +38,7 @@
                target="${target}">
             <src path="${src.dir}" />
             <src path="${test.dir}" />
+            <compilerarg line="-Xlint" />
             <classpath refid="interpreter-APO.classpath" />
         </javac>
     </target>
