--- a/DI-container/build.xml
+++ b/DI-container/build.xml
@@ -2,7 +2,7 @@
 <project name="DI-container" basedir="." default="all">
     <property name="src.dir" value="src" />
     <property name="test.dir" value="test" />
-    <property name="built.dir" value="bin" />
+    <property name="build.dir" value="bin" />
     <property name="junit.output.dir" value="junit_results" />
     <property name="javadoc.output.dir" value="doc" />
     <property name="debuglevel" value="source,lines,vars" />
@@ -13,26 +13,26 @@
         <pathelement location="/usr/share/java/junit4.jar" />
     </path>
     <path id="DI-container.classpath">
-        <pathelement location="${built.dir}" />
+        <pathelement location="${build.dir}" />
         <path refid="JUnit4.userclasspath" />
     </path>
     <target name="all" depends="clean, build, junit" />
     <target name="clean">
-        <delete dir="${built.dir}" />
+        <delete dir="${build.dir}" />
     </target>
     <target name="init">
-        <mkdir dir="${built.dir}" />
-        <copy includeemptydirs="false" todir="${built.dir}">
+        <mkdir dir="${build.dir}" />
+        <copy includeemptydirs="false" todir="${build.dir}">
             <fileset dir="${src.dir}" excludes="**/*.java" />
         </copy>
-        <copy includeemptydirs="false" todir="${built.dir}">
+        <copy includeemptydirs="false" todir="${build.dir}">
             <fileset dir="${test.dir}" excludes="**/*.java" />
         </copy>
     </target>
     <target name="build" depends="init">
         <javac debug="true"
                debuglevel="${debuglevel}"
-               destdir="${built.dir}"
+               destdir="${build.dir}"
                includeantruntime="false"
                source="${source}"
                target="${target}">
