Interfejs w Gtk za pomocą Glade

--- a/generator_pi/Makefile
+++ b/generator_pi/Makefile
@@ -1,5 +1,6 @@
 CXX = g++ -std=c++11
 CXXFLAGS = -Wall -Wextra
+LIBS = `pkg-config gtkmm-3.0 --cflags --libs`
 
 all : generator_pi
 
@@ -9,4 +10,4 @@ clean :
 refresh : clean all
 
 generator_pi : generator_pi.cpp
-	$(CXX) $(CXXFLAGS) -Wall -Wextra generator_pi.cpp -o generator_pi
+	$(CXX) $(CXXFLAGS) generator_pi.cpp -o generator_pi
