--- a/DI-container/.gitignore
+++ b/DI-container/.gitignore
@@ -1,12 +1,10 @@
-# ignore Java output
+# Java output
+bin
+junit_results
+junit_reports
 
-/bin
-
-# ignore JUnit output
-
-/junit_results
-/junit_reports
-
-# ignore IntelliJ files
-
+# IntelliJ project files
 *.iml
+.idea
+out
+gen
