Zmiana nazw funkcji i modułów.

--- a/memory_allocator/Makefile
+++ b/memory_allocator/Makefile
@@ -1,5 +1,6 @@
 CC = gcc -std=gnu99
-CFLAGS = -pthread -fPIC -shared -Wall -Wextra
+CFLAGS =  -Wall -Wextra -pthread -fPIC -shared
+CMPL = $(CC) $(CFLAGS)
 
 all : libmemalc.so
 
@@ -7,5 +8,4 @@ clean :
 	rm -f *.so
 
 libmemalc.so : memalc.c
-	$(CC) $(CFLAGS) memalc.c -o libmemalc.so
-
+	$(CMPL) memalc.c -o libmemalc.so
