Wstęp do amplifiera.

--- a/FPGA-SoundMixer/FPGA-SoundMixer.qsf
+++ b/FPGA-SoundMixer/FPGA-SoundMixer.qsf
@@ -201,9 +201,13 @@ set_location_assignment PIN_AE12 -to SW[9]
 #============================================================
 
 
-set_global_assignment -name VERILOG_FILE "FPGA-SoundMixer.v"
-set_global_assignment -name SDC_FILE "FPGA-SoundMixer.sdc"
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name VERILOG_FILE gain_hex.v
+set_global_assignment -name VERILOG_FILE synchro.v
+set_global_assignment -name VERILOG_FILE "FPGA-SoundMixer.v"
+set_global_assignment -name SDC_FILE "FPGA-SoundMixer.sdc"
+set_global_assignment -name VERILOG_FILE amplifier.v
+set_global_assignment -name VERILOG_FILE get_gain.v
