FPGA: Moduły QSys.

--- a/FPGA-SoundMixer/FPGA-SoundMixer.qsf
+++ b/FPGA-SoundMixer/FPGA-SoundMixer.qsf
@@ -5,8 +5,8 @@
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CSEMA5F31C6
 set_global_assignment -name TOP_LEVEL_ENTITY "FPGA-SoundMixer"
-set_global_assignment -name ORIGINAL_QUARTUS_VERSION "15.1.0"
-set_global_assignment -name LAST_QUARTUS_VERSION 13.0
+set_global_assignment -name ORIGINAL_QUARTUS_VERSION 15.1.0
+set_global_assignment -name LAST_QUARTUS_VERSION "17.1.0 Lite Edition"
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "19:29:50 DECEMBER 26,2017"
 set_global_assignment -name DEVICE_FILTER_PACKAGE FBGA
 set_global_assignment -name DEVICE_FILTER_PIN_COUNT 896
@@ -205,6 +205,8 @@ set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name QSYS_FILE mixer.qsys
+set_global_assignment -name VERILOG_FILE audio_amplifier.v
 set_global_assignment -name VERILOG_FILE gain_hex.v
 set_global_assignment -name VERILOG_FILE synchro.v
 set_global_assignment -name VERILOG_FILE "FPGA-SoundMixer.v"
