Nowe pliki gitignore.

--- a/Interpreter-APO/.gitignore
+++ b/Interpreter-APO/.gitignore
@@ -1,12 +1,10 @@
-# sample APO files
-*.apo
-
-# Java output
+# Java output folders and files
 bin
+# docs
 junit_results
 junit_reports
 
-# IntelliJ project files
+# IntelliJ project folders and files
 *.iml
 .idea
 out
