--- a/DI-container/.gitignore
+++ b/DI-container/.gitignore
@@ -1,9 +1,10 @@
-# Java output
+# Java output folders and files
 bin
+# docs
 junit_results
 junit_reports
 
-# IntelliJ project files
+# IntelliJ project folders and files
 *.iml
 .idea
 out
