--- a/saper/tsconfig.json
+++ b/saper/tsconfig.json
@@ -1,11 +1,11 @@
 {
     "compilerOptions": {
-        "module": "commonjs",
+        "module": "none",
         "target": "es5",
         "noImplicitAny": false,
-        "sourceMap": false
+        "sourceMap": true
     },
-    "exclude": [
-        "node_modules"
+    "files": [
+        "saper.ts"
     ]
 }
