--- a/saper/tsconfig.json
+++ b/saper/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "module": "none",
         "target": "es5",
-        "noImplicitAny": false,
+        "noImplicitAny": true,
         "sourceMap": true
     },
     "files": [
