--- a/PI-Generator/Makefile
+++ b/PI-Generator/Makefile
@@ -1,6 +1,6 @@
 CXX = g++ -std=c++11
 CXXFLAGS = -Wall -Wextra
-LIBS = `pkg-config gtkmm-3.0 --cflags --libs`
+GTKMM = `pkg-config gtkmm-3.0 --cflags --libs`
 
 all : generator_pi
 
@@ -10,4 +10,5 @@ clean :
 refresh : clean all
 
 generator_pi : generator_pi.cpp
-	$(CXX) $(CXXFLAGS) generator_pi.cpp -o generator_pi
+	$(CXX) $(CXXFLAGS) generator_pi.cpp -o generator_pi $(GTKMM)
+
