--- a/converter/CMakeLists.txt
+++ b/converter/CMakeLists.txt
@@ -1,11 +1,13 @@
-cmake_minimum_required(VERSION 3.5.1)
-project(converter)
+cmake_minimum_required(VERSION 3.5)
 
+# PROJECT
+project(converter VERSION 1.0)
 set(PROJECT_DIR ${CMAKE_BINARY_DIR}/..)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/..)
 
+# COMPILER
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS "-Wall -Wextra")
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/..)
-
+# OUTPUT
 add_executable(converter converter.cpp)
