--- a/memory_allocator/CMakeLists.txt
+++ b/memory_allocator/CMakeLists.txt
@@ -7,13 +7,13 @@ set(PROJECT_DIR ${CMAKE_BINARY_DIR}/..)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/..)
 
 # PACKAGES
+set(CMAKE_THREAD_PREFER_PTHREAD true)
+set(THREADS_PREFER_PTHREAD_FLAG true)
 find_package(Threads REQUIRED)
 
 # COMPILER
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_FLAGS "-Wall -Wextra -fPIC")
-set(CMAKE_USE_PTHREADS_INIT true)
-set(CMAKE_USE_PTHREADS_INIT ON)
 
 # OUTPUT
 add_library(memalc SHARED memalc.c)
