--- a/memory_allocator/CMakeLists.txt
+++ b/memory_allocator/CMakeLists.txt
@@ -13,7 +13,8 @@ find_package(Threads REQUIRED)
 
 # COMPILER
 set(CMAKE_C_STANDARD 99)
-set(CMAKE_C_FLAGS "-Wall -Wextra -fPIC")
+set(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS}-Wall -Wextra")
+set(CMAKE_POSITION_INDEPENDENT_CODE true)
 
 # OUTPUT
 add_library(memalc SHARED memalc.c)
