--- a/PI-Generator/CMakeLists.txt
+++ b/PI-Generator/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.5)
 
 # PROJECT
-project(generator_pi VERSION 1.0)
-set(PROJECT_DIR ${CMAKE_BINARY_DIR}/..)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/..)
+project(generator VERSION 1.0)
+set(PROJECT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_DIR})
 
 # PACKAGES
 find_package(PkgConfig REQUIRED)
@@ -16,5 +16,5 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 
 # OUTPUT
-add_executable(generator_pi generator_pi.cpp)
-target_link_libraries(generator_pi ${GTKMM_LIBRARIES})
+add_executable(generator generator.cpp)
+target_link_libraries(generator ${GTKMM_LIBRARIES})
