--- a/converter/CMakeLists.txt
+++ b/converter/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 3.5)
 
 # PROJECT
 project(converter VERSION 1.0)
-set(PROJECT_DIR ${CMAKE_BINARY_DIR}/..)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/..)
+set(PROJECT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_DIR})
 
 # COMPILER
 set(CMAKE_CXX_STANDARD 11)
