--- a/converter/CMakeLists.txt
+++ b/converter/CMakeLists.txt
@@ -2,8 +2,7 @@ cmake_minimum_required(VERSION 3.5)
 
 # PROJECT
 project(converter VERSION 1.0)
-set(PROJECT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_DIR})
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
 
 # COMPILER
 set(CMAKE_CXX_STANDARD 11)
