--- a/lotto/CMakeLists.txt
+++ b/lotto/CMakeLists.txt
@@ -4,9 +4,12 @@ cmake_minimum_required(VERSION 3.5)
 project(lotto VERSION 1.0)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
 
+# SOURCES
+set(SOURCES "lotto.cpp")
+
 # COMPILER
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 
 # OUTPUT
-add_executable(lotto lotto.cpp)
+add_executable(lotto ${SOURCES})
