Drobne zmiany w CMakeLists.

--- a/allocator/CMakeLists.txt
+++ b/allocator/CMakeLists.txt
@@ -1,10 +1,11 @@
 cmake_minimum_required(VERSION 3.5)
+project(memalc VERSION 1.0)
 set(CMAKE_BUILD_TYPE Release)
 
-# PROJECT
-project(memalc VERSION 1.0)
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib")
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib")
+# COMPILER
+set(CMAKE_C_STANDARD 99)
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra")
+set(CMAKE_POSITION_INDEPENDENT_CODE true)
 
 # PACKAGES
 set(CMAKE_THREAD_PREFER_PTHREAD true)
@@ -13,16 +14,14 @@ find_package(Threads REQUIRED)
 
 # SOURCES
 include_directories("${PROJECT_SOURCE_DIR}/include")
-set(MEMALC_SOURCES "src/memalc.c")
-set(PTHREADSEM_SOURCES "src/pthreadsem.c")
-
-# COMPILER
-set(CMAKE_C_STANDARD 99)
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra")
-set(CMAKE_POSITION_INDEPENDENT_CODE true)
+set(MEMALC_SOURCES "${PROJECT_SOURCE_DIR}/src/memalc.c")
+set(PTHREADSEM_SOURCES "${PROJECT_SOURCE_DIR}/src/pthreadsem.c")
 
 # OUTPUT
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib")
 add_library(memalc SHARED ${MEMALC_SOURCES})
-add_library(pthreadsem STATIC ${PTHREADSEM_SOURCES})
 target_link_libraries(memalc Threads::Threads)
+
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib")
+add_library(pthreadsem STATIC ${PTHREADSEM_SOURCES})
 target_link_libraries(pthreadsem Threads::Threads)
