Nowe cele w buildfile.

--- a/DI-Container/build.xml
+++ b/DI-Container/build.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project name="DI-container" basedir="." default="all">
+<project name="DI-Container" basedir="." default="all">
+  <property name="vendor" value="Rafał Kaleta" />
+  <property name="version" value="1.0" />
   <property name="src.dir" value="src" />
   <property name="test.dir" value="test" />
   <property name="build.dir" value="bin" />
@@ -10,12 +12,12 @@
   <property name="target" value="1.8" />
   <property name="source" value="1.8" />
 
-  <path id="JUnit4.userclasspath">
+  <path id="JUnit4.libraryclasspath">
     <pathelement location="/usr/share/java/hamcrest-core.jar" />
     <pathelement location="/usr/share/java/junit4.jar" />
   </path>
   <path id="DI-container.classpath">
-    <path refid="JUnit4.userclasspath" />
+    <path refid="JUnit4.libraryclasspath" />
     <pathelement location="${build.dir}" />
   </path>
 
@@ -27,32 +29,33 @@
     <mkdir dir="${build.dir}" />
     <copy todir="${build.dir}" includeemptydirs="false">
       <fileset dir="${src.dir}" excludes="**/*.java" />
-    </copy>
-  </target>
-
-  <target name="init-test" depends="init">
-    <copy todir="${build.dir}" includeemptydirs="false">
       <fileset dir="${test.dir}" excludes="**/*.java" />
     </copy>
   </target>
 
   <target name="build" depends="init">
-    <javac source="${source}" target="${target}" debug=" true" debuglevel="${debuglevel}"
-           destdir="${build.dir}" includeantruntime="false">
-      <src path="${src.dir}" />
-      <compilerarg line="-Xlint" />
-      <classpath refid="DI-container.classpath" />
-    </javac>
-  </target>
-
-  <target name="build-test" depends="init-test">
-    <javac source="${source}" target="${target}" debug=" true" debuglevel="${debuglevel}"
+    <javac source="${source}" target="${target}" debug="true" debuglevel="${debuglevel}"
            destdir="${build.dir}" includeantruntime="false">
       <src path="${src.dir}" />
       <src path="${test.dir}" />
       <compilerarg line="-Xlint" />
       <classpath refid="DI-container.classpath" />
     </javac>
+  </target>
+
+  <target name="jar" depends="build">
+    <buildnumber />
+    <jar destfile="di_container.jar" basedir="${build.dir}" excludes="**/*Test.class">
+      <manifest>
+        <attribute name="Built-By" value="${vendor}" />
+        <attribute name="Specification-Title" value="Dependency Injection Container" />
+        <attribute name="Specification-Version" value="${version}" />
+        <attribute name="Specification-Vendor" value="${vendor}" />
+        <attribute name="Implementation-Title" value="ref_humbold.di_container" />
+        <attribute name="Implementation-Verion" value="${version}-build${build.number}" />
+        <attribute name="Implementation-Vendor" value="${vendor}" />
+      </manifest>
+    </jar>
   </target>
 
   <target name="test">
@@ -81,9 +84,7 @@
     </javadoc>
   </target>
 
-  <target name="make" depends="clean, build" />
+  <target name="release" depends="clean, build, jar" />
 
-  <target name="make-test" depends="clean, build-test" />
-
-  <target name="all" depends="make-test, test, javadocs" />
+  <target name="all" depends="clean, build, test, jar, javadocs" />
 </project>
