--- a/converter/CMakeLists.txt
+++ b/converter/CMakeLists.txt
@@ -5,9 +5,16 @@ project(converter VERSION 1.1)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 
+# PACKAGES
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(GTKMM gtkmm-3.0)
+include_directories(${GTKMM_INCLUDE_DIRS})
+link_directories(${GTKMM_LIBRARY_DIRS})
+
 # SOURCES
 set(SOURCES "converter.cpp")
 
 # OUTPUT
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
 add_executable(converter ${SOURCES})
+target_link_libraries(converter ${GTKMM_LIBRARIES})
