--- a/allocator/CMakeLists.txt
+++ b/allocator/CMakeLists.txt
@@ -4,7 +4,7 @@ set(CMAKE_BUILD_TYPE Release)
 
 # COMPILER
 set(CMAKE_C_STANDARD 99)
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Wno-unknown-pragmas")
 set(CMAKE_POSITION_INDEPENDENT_CODE true)
 
 # PACKAGES
