--- a/converter/CMakeLists.txt
+++ b/converter/CMakeLists.txt
@@ -3,7 +3,7 @@ project(converter VERSION 1.1)
 
 # COMPILER
 set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-unknown-pragmas")
 
 # PACKAGES
 find_package(PkgConfig REQUIRED)
