--- a/lotto/CMakeLists.txt
+++ b/lotto/CMakeLists.txt
@@ -3,7 +3,7 @@ project(lotto VERSION 1.1)
 
 # COMPILER
 set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-unknown-pragmas")
 
 # SOURCES
 set(SOURCES "lotto.cpp")
