Zmiana nazw głównych pakietów

--- a/Interpreter-APO/build.xml
+++ b/Interpreter-APO/build.xml
@@ -63,7 +63,7 @@
   </target>
 
   <target name="jar" depends="build">
-    <jar destfile="apo.jar" basedir="${build.dir}" excludes="**/*Test.class">
+    <jar destfile="apolang.jar" basedir="${build.dir}" excludes="**/*Test.class">
       <manifest>
         <attribute name="Built-By" value="${vendor}" />
         <attribute name="Main-Class" value="ref_humbold.apolanguage.Interpreter" />
@@ -99,7 +99,7 @@
     <delete dir="${javadoc.output.dir}" />
     <mkdir dir="${javadoc.output.dir}" />
     <javadoc sourcepath="${src.dir}" destdir="${javadoc.output.dir}" access="public">
-      <package name="ref_humbold.apolanguage.*" />
+      <package name="refhumbold.apolang.*" />
     </javadoc>
   </target>
 
