--- a/Interpreter-APO/build.xml
+++ b/Interpreter-APO/build.xml
@@ -9,6 +9,7 @@
   <property name="junit.output.dir" value="junit_results" />
   <property name="junit.report.dir" value="junit_reports" />
   <property name="javadoc.output.dir" value="docs" />
+  <property name="main.package" value="refhumbold.apolang" />
   <property name="ivy.lib.dir" value="lib" />
   <property name="ivy.install.version" value="2.4.0" />
   <property name="debuglevel" value="source,lines,vars" />
@@ -63,14 +64,16 @@
   </target>
 
   <target name="jar" depends="build">
-    <jar destfile="apolang.jar" basedir="${build.dir}" excludes="**/*Test.class">
+    <delete file="apolang-*.jar" />
+    <jar destfile="apolang-${major.version}.${minor.version}.jar" basedir="${build.dir}"
+         excludes="**/*Test.class">
       <manifest>
         <attribute name="Built-By" value="${vendor}" />
-        <attribute name="Main-Class" value="ref_humbold.apolanguage.Interpreter" />
+        <attribute name="Main-Class" value="${main.package}.Interpreter" />
         <attribute name="Specification-Title" value="APO Language Interpreter" />
         <attribute name="Specification-Version" value="${major.version}" />
         <attribute name="Specification-Vendor" value="${vendor}" />
-        <attribute name="Implementation-Title" value="ref_humbold.apolanguage" />
+        <attribute name="Implementation-Title" value="${main.package}" />
         <attribute name="Implementation-Verion" value="${major.version}.${minor.version}" />
         <attribute name="Implementation-Vendor" value="${vendor}" />
       </manifest>
@@ -99,7 +102,7 @@
     <delete dir="${javadoc.output.dir}" />
     <mkdir dir="${javadoc.output.dir}" />
     <javadoc sourcepath="${src.dir}" destdir="${javadoc.output.dir}" access="public">
-      <package name="refhumbold.apolang.*" />
+      <package name="${main.package}.*" />
     </javadoc>
   </target>
 
